--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
-<html>
-  <head>
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-            <script src="app.js"></script>
- </head> 
-<body>
-2015 US Population
-<table>
-  <tr>
-    <th>Total</th>
-    <td><script>document.write( total )</script></td>
-  </tr>
-  <tr>
-    <th>Max</th>
-    <td><script>document.write(state);</script></td>
-  </tr>
-</table>
+<!DOCTYPE html>
+<html lang='en'>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>US Population</title>
 
-  </body>
-  </html>
+    <!-- The library dependencies -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+</head>
+<body>
+    <script src="app.js"></script>
+    2015 US Population
+    <table>
+      <tr>
+        <th>Total</th>
+        <td><script>document.write( total )</script></td>
+      </tr>
+      <tr>
+        <th>Max</th>
+        <td><script>document.write(state);</script></td>
+      </tr>
+    </table>
+</body>
+</html>
