(refactor) Add caption

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <script src="app.js"></script>
-    2015 US Population
+    
     <table>
+        <caption>2015 US Population</caption>
       <tr>
         <th>Total</th>
         <td><script>document.write( total )</script></td>
