(feat) Add id to table

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <script src="app.js"></script>
     
-    <table>
+    <table id="population">
         <caption>2015 US Population</caption>
     </table>
 </body>
