(feat) Add styles.css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <!-- The library dependencies -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+    <!-- Import styles.css -->
+    <link type="text/css" rel="stylesheet" href="styles.css"/>
 </head>
 <body>
     <script src="app.js"></script>
