--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link type="text/css" rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <script src="app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
     
     <table id="population">
         <caption>2015 US Population</caption>
