(refactor) Change table format

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     
     <table id="population">
         <caption>2015 US Population</caption>
+        <thead>
+            <tr>
+                <th>State</th>
+                <th>Region</th>
+                <th>Population</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
     </table>
 </body>
 </html>
