(feat, refactor) Add division and update addRow

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <tr>
                 <th>State</th>
                 <th>Region</th>
+                <th>Division</th>
                 <th>Population</th>
             </tr>
         </thead>
